[tool.poetry]
name = "dash-react-force-graph"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.2.0"
dash-bootstrap-components = "^1.0.3"
dash-react-font-awesome-icon-picker = {git = "https://github.com/nodelab-aps/dash-react-font-awesome-icon-picker.git", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
