[tool.poetry]
name = "dash-react-force-graph"
version = "0.1.0"
description = ""
authors = ["Jon Thompson <jjt@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
dash = "^2.2.0"
dash-bootstrap-components = "^1.0.3"
dash-react-font-awesome-icon-picker = {git = "https://github.com/nodelab-aps/dash-react-font-awesome-icon-picker.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
