[tool.poetry]
name = "dash-react-force-graph"
version = "0.1.0"
description = ""
authors = ["Jon Thompson"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pyyaml = "^6.0"
dash = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
